[gd_scene load_steps=5 format=3 uid="uid://du2feeoelork"]

[ext_resource type="Script" path="res://src/objects/kickback/kickback.gd" id="1_10l53"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t426p"]
size = Vector2(60, 60)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_6hdhj"]
rough = true
bounce = 0.1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o0adk"]
size = Vector2(60, 100)

[node name="KickBack" type="Node2D"]
script = ExtResource("1_10l53")
auto_inactive_delay = null

[node name="Holder" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="Holder"]
position = Vector2(0, -80)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Holder/Area2D"]
shape = SubResource("RectangleShape2D_t426p")

[node name="Pusher" type="StaticBody2D" parent="Holder"]
collision_mask = 2
physics_material_override = SubResource("PhysicsMaterial_6hdhj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Holder/Pusher"]
shape = SubResource("RectangleShape2D_o0adk")

[node name="TopLine" type="Line2D" parent="Holder"]
points = PackedVector2Array(-22, -48, 22, -48)
begin_cap_mode = 2
end_cap_mode = 2

[node name="BottomLine" type="Line2D" parent="."]
position = Vector2(0, 50)
points = PackedVector2Array(-30, 0, 30, 0)

[connection signal="body_entered" from="Holder/Area2D" to="." method="_on_body_entered_detection_area"]
[connection signal="body_exited" from="Holder/Area2D" to="." method="_on_body_exited_detection_area"]
